Fix URL input and button display on mobile.

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -2565,9 +2565,11 @@ figcaption + .img-responsive {
     }
   }
   .input-bar {
-    display: flex;
-    flex-direction: row;
-    align-items: start;
+    @include respond-tablet {
+      display: flex;
+      flex-direction: row;
+      align-items: start;
+    }
   }
   input.form-priority-input {
     flex: 1;
